35/https/deploy03.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dep03
  name: dep03
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dep03
  template:
    metadata:
      labels:
        app: dep03
    spec:
      containers:
        - name: nginx-dep03
          image: wangyanglinux/myapp:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vh-svc-03
spec:
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
  selector:
    app: dep03
---
